--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
   <section id="testimonials">
 
-    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel" data-ride="false">
+    <div id="carouselExampleControls" class="carousel slide" data-ride="false">
       <div class="carousel-inner">
         <div class="carousel-item active">
           <h2>I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
