--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
         <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="">Contact</a>
+              <a class="nav-link" href="#footer">Contact</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="">Prices</a>
+              <a class="nav-link" href="#pricing">Prices</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="">Dwonload</a>
+              <a class="nav-link" href="#cta">Dwonload</a>
             </li>
           </ul>
         </div>
