--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
               <a class="nav-link" href="#pricing">Prices</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#cta">Dwonload</a>
+              <a class="nav-link" href="#cta">Download</a>
             </li>
           </ul>
         </div>
